# CPP-Practice

./: .gitignore  README.md
Episode-1_Function-Class-and-Object/: .~Episode-1_Function-Class-and-Object.pptx  Episode-1_Function-Class-and-Object.docx  Episode-1_Function-Class-and-Object.pptx  README.md
Episode-1_Function-Class-and-Object/definite_integral/: LICENSE
Episode-1_Function-Class-and-Object/definite_integral/src/: CMakeLists.txt  definite_integral.cpp
Episode-1_Function-Class-and-Object/docs/: Episode-1_Function-Class-and-Object.pptx  Report.docx
Episode-1_Function-Class-and-Object/integerSet/src/: CMakeLists.txt  integerSet.cpp  integerSet.h  main.cpp
Episode-2_Data-Sharing-and-Protection/circle_distance/src/: Circle.h  main.cpp
Episode-2_Data-Sharing-and-Protection/docs/: Episode2-Data-Sharing-and-Protection.docx
Episode-2_Data-Sharing-and-Protection/library_manage/src/: Book.cpp  Book.h  Reader.cpp  Reader.h  main.cpp
Episode-3-Array-and-Pointer/area/src/: main.cpp
Episode-3-Array-and-Pointer/bubble-sort/src/: main.cpp
Episode-3-Array-and-Pointer/docs/: Episode-3-Array-and-Pointer.docx
Episode-4-Inheritance-and-Derivation/college-management/src/: GraduateStudent.cpp  GraduateStudent.h  Leader.cpp  Leader.h  Person.cpp  Person.h  Student.cpp  (+6 more)
Episode-4-Inheritance-and-Derivation/docs/: Episode-4-Inheritance-and-Derivation.docx
Episode-5-operator-overloading/docs/: Episode-5-operator-overloading.docx
Episode-6-Exception/docs/: Episode-6-Exception.docx
definite_integral/: CMakeLists.txt
integerSet/src/: integerSet.cpp  integerSet.h
(+13 files in other folders)
