cmake_minimum_required(VERSION 3.11.2)
project(bin
    VERSION 1.0.0
)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")

set(SOURCE_FILES ${SOURCES} ${HEADERS})

add_executable(${PROJECT_NAME} ${SOURCE_FILES})